started to address the card unalignment issue in collection

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,30 +1,23 @@
-
-.card-cache {
+.favorite-card {
   overflow: hidden;
   height: 120px;
-  // width: 350px;
   background: $light-beige;
-  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   padding-left: 15px;
   border-radius: 10px;
   flex-direction: row;
-  justify-content:flex-start;
+  justify-content: flex-start;
   margin-bottom: 10px;
   position: relative;
-}
 
-.card-cache i {
-  color: $dark-brown;
-}
-
-.card-cache img {
-  height: 85px;
-  width: 85px;
-  object-fit: cover;
-  border-radius: 10%;
-  flex-shrink: 0;
+  img {
+    height: 85px;
+    width: 85px;
+    object-fit: cover;
+    border-radius: 10%;
+    flex-shrink: 0;
+  }
 }
 
 .card-cache h2 {
@@ -42,7 +35,7 @@
 .card-cache p {
   font-size: 12px;
   line-height: 0.8;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $dark-brown;
@@ -116,7 +109,7 @@
 .card-cache-added-to-collection p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $dark-brown;
@@ -130,7 +123,6 @@
 .icon-added-cache {
   display: contents;
 }
-
 
 // CARD CACHE DELETED FROM COLLECTION
 
@@ -163,7 +155,7 @@
 .card-cache-deleted-from-collection p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $dark-brown;
@@ -177,9 +169,6 @@
 .icon-deleted-cache {
   display: contents;
 }
-
-
-
 
 // CARD COLLECTION (SPECIES)
 
@@ -196,7 +185,7 @@
   flex-direction: row;
   justify-content: center;
   margin-bottom: 10px;
-  position:relative;
+  position: relative;
 }
 
 .card-species i {
@@ -221,7 +210,7 @@
 .card-species p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $green-light;
@@ -285,7 +274,7 @@
 .card-species-added-to-collection p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $green-light;
@@ -299,54 +288,6 @@
 .icon-added-species {
   display: contents;
 }
-
-
-// CARD SPECIES DELETED FROM COLLECTION
-
-.card-species-deleted-from-collection {
-  overflow: hidden;
-  height: 120px;
-  width: 350px;
-  background: $light-beige;
-  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  border-radius: 10px;
-}
-
-.card-species-deleted-from-collection img {
-  height: 72%;
-  width: 26%;
-  object-fit: cover;
-  border-radius: 10%;
-}
-
-.card-species-deleted-from-collection h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-  color: $green-light;
-}
-
-.card-species-deleted-from-collection p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-  color: $green-light;
-}
-
-.card-species-deleted-from-collection .card-species-deleted-from-collection-infos {
-  padding: 16px;
-  width: 45%;
-}
-
-.icon-deleted-species {
-  display: contents;
-}
-
 
 // CARD LOG ADDED TO PROFILE
 
@@ -379,7 +320,7 @@
 .card-log-added-to-collection p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $green-dark;
@@ -393,7 +334,6 @@
 .icon-added-log {
   display: contents;
 }
-
 
 // CARD LOG DELETED FROM PROFILE
 
@@ -425,7 +365,7 @@
 .card-log-deleted-from-collection p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
   color: $green-dark;
